--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Canada -- Politics and government -- 1841-1867'
 - !lcc 'JL'
+- GITenberg
 title: British Supremacy & Canadian Self-Government, 1839-1854
 url: http://www.gutenberg.org/ebooks/31363
